--- a/genres/genres.html
+++ b/genres/genres.html
@@ -169,7 +169,7 @@
                                             <div class="ml-3 mt-4">
                                                 <h5 class="hp-card-title">Deep Purple</h5>
                                                 <p>Made in Japan</p>
-                                                <i class="bi bi-heart " id="firstHeart"></i>
+                                                <i class="bi bi-heart dpurpletHeart" id="firstHeart"></i>
                                             </div>
                                         </div>
                                     </div>
@@ -179,9 +179,9 @@
                                                 <img src="/assets/cards/12.jpg " width="70px" height="70px" alt="... ">
                                             </div>
                                             <div class="ml-3 mt-4">
-                                                <h5 class="hp-card-title">Doors</h5>
+                                                <h5 class="hp-card-title doors">Doors</h5>
                                                 <p>The Doors</p>
-                                                <i class="bi bi-heart"></i>
+                                                <i class="bi bi-heart doorstHeart"></i>
                                             </div>
                                         </div>
                                     </div>
@@ -191,9 +191,9 @@
                                                 <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
                                             </div>
                                             <div class="ml-3 mt-4">
-                                                <h5 class="hp-card-title">Led Zeppelin</h5>
+                                                <h5 class="hp-card-title ">Led Zeppelin</h5>
                                                 <p>Led Zeppelin IV</p>
-                                                <i class="bi bi-heart"></i>
+                                                <i class="bi bi-heart ledZep"></i>
                                             </div>
                                         </div>
                                     </div>
@@ -203,9 +203,9 @@
                                                 <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
                                             </div>
                                             <div class="ml-3 mt-4">
-                                                <h5 class="hp-card-title">The Who</h5>
+                                                <h5 class="hp-card-title ">The Who</h5>
                                                 <p>Who's Next</p>
-                                                <i class="bi bi-heart"></i>
+                                                <i class="bi bi-heart who"></i>
                                             </div>
                                         </div>
                                     </div>
@@ -215,9 +215,9 @@
                                                 <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
                                             </div>
                                             <div class="ml-3 mt-4">
-                                                <h5 class="hp-card-title">Rolling Stones</h5>
+                                                <h5 class="hp-card-title ">Rolling Stones</h5>
                                                 <p>Flowers</p>
-                                                <i class="bi bi-heart"></i>
+                                                <i class="bi bi-heart roll"></i>
                                             </div>
                                         </div>
                                     </div>
@@ -227,9 +227,9 @@
                                                 <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
                                             </div>
                                             <div class="ml-3 mt-4">
-                                                <h5 class="hp-card-title">Pink Floyd</h5>
+                                                <h5 class="hp-card-title ">Pink Floyd</h5>
                                                 <p>Atom Heart Mother</p>
-                                                <i class="bi bi-heart"></i>
+                                                <i class="bi bi-heart pfloyd"></i>
                                             </div>
                                         </div>
                                     </div>
@@ -239,9 +239,9 @@
                                                 <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
                                             </div>
                                             <div class="ml-3 mt-4">
-                                                <h5 class="hp-card-title">The Clash</h5>
+                                                <h5 class="hp-card-title ">The Clash</h5>
                                                 <p>The Clash</p>
-                                                <i class="bi bi-heart"></i>
+                                                <i class="bi bi-heart clash"></i>
                                             </div>
                                         </div>
                                     </div>
@@ -251,9 +251,9 @@
                                                 <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
                                             </div>
                                             <div class="ml-3 mt-4">
-                                                <h5 class="hp-card-title">The Police</h5>
+                                                <h5 class="hp-card-title ">The Police</h5>
                                                 <p>Reggatta de Blanc</p>
-                                                <i class="bi bi-heart"></i>
+                                                <i class="bi bi-heart police"></i>
                                             </div>
                                         </div>
                                     </div>
@@ -265,7 +265,7 @@
                                             <div class="ml-3 mt-4">
                                                 <h5 class="hp-card-title">David Bowie</h5>
                                                 <p>Space Oddity</p>
-                                                <i class="bi bi-heart"></i>
+                                                <i class="bi bi-heart bowie"></i>
                                             </div>
                                         </div>
                                     </div>
@@ -277,7 +277,7 @@
                                             <div class="ml-3 mt-4">
                                                 <h5 class="hp-card-title">Janis Joplin</h5>
                                                 <p>Live in Honolulu</p>
-                                                <i class="bi bi-heart"></i>
+                                                <i class="bi bi-heart joplin"></i>
                                             </div>
                                         </div>
                                     </div>
@@ -289,7 +289,7 @@
                                             <div class="ml-3 mt-4">
                                                 <h5 class="hp-card-title">MFSB</h5>
                                                 <p>Love is the message</p>
-                                                <i class="bi bi-heart"></i>
+                                                <i class="bi bi-heart mfsb"></i>
                                             </div>
                                         </div>
                                     </div>
@@ -301,7 +301,7 @@
                                             <div class="ml-3 mt-4">
                                                 <h5 class="hp-card-title">Jimi Hendrix</h5>
                                                 <p>Are you experienced</p>
-                                                <i class="bi bi-heart"></i>
+                                                <i class="bi bi-heart hendrix"></i>
                                             </div>
                                         </div>
                                     </div>
