--- a/artists/artists.html
+++ b/artists/artists.html
@@ -159,7 +159,10 @@
                             </div>
 
                             <div class="album-info">
-                                <img src="../assets/verified.jpg" width="50" height="50" alt="logo-verified"> <h6 class="d-inline-block">Verified Artist</h6>
+                                <div class="row m-0 verified-artist-badge">
+
+                                    <img src="../assets/verified.jpg" width="50" height="50" alt="logo-verified"> <h6 class="d-inline-block">Verified Artist</h6>
+                                </div>
                                 <p><strong>Queen</strong></p>
                                 <p>37,120,733 monthly listeners</p>  
                             </div>
