--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                                 </div>
                             </div>
 
-                            <h3 id="good-morning-h3">Good morning</h3>
+                            <h3 id="good-morning-h3"><strong>Good morning</strong></h3>
 
                             <div class="good-morning-container row">
 
