added some css animation to headers

--- a/artists/artists.html
+++ b/artists/artists.html
@@ -168,7 +168,7 @@
 
                                     <img src="../assets/verified.jpg" width="50" height="50" alt="logo-verified"> <h6 class="d-inline-block">Verified Artist</h6>
                                 </div>
-                                <p><strong>Queen</strong></p>
+                                <p class="artist-queen"><strong>Queen</strong></p>
                                 <p>37,120,733 monthly listeners</p>  
                             </div>
 
