--- a/genres/genres.html
+++ b/genres/genres.html
@@ -27,12 +27,7 @@
                     <div class="col-2 d-none d-xl-block">
                         <div class="row">
                             <div class="side-bar col-12 px-0">
-                                <a href="index.html"><img class="spotify-logo" src="../assets/spotify-logo.png" alt="sidebar-logo"></a>
-                                
-                                <a href="../profile/profile.html" class="d-flex py-2">
-                                    <i class="bi bi-person-circle mx-3"></i>
-                                    <p>Account</p>
-                                </a> 
+                                <a href="../index.html"><img class="spotify-logo" src="../assets/spotify-logo.png" alt="sidebar-logo"></a>
                                 
                                 <a href="../index.html" class="d-flex py-2">
                                     <i class="bi bi-house-door mx-3"></i>
@@ -49,20 +44,20 @@
                                     <p>Albums</p>
                                 </a>
 
-                                <a href="./artists.html" class="d-flex py-2">
+                                <a href="../artists/artists.html" class="d-flex py-2">
                                     <i class="bi bi-music-note-beamed mx-3"></i>
                                     <p>Artists</p>
-                                </a>
-
-                                <a href="#" class="d-flex py-2">
-                                    <i class="bi bi-plus-square-dotted mx-3"></i>
-                                    <p>Create Playlist</p>
                                 </a>
 
                                 <a href="../favourites/favourites.html" class="d-flex py-2">
                                     <i class="bi bi-heart-fill mx-3"></i>
                                     <p>Liked Songs</p>
                                 </a>
+
+                                <a href="../profile/profile.html" class="d-flex py-2">
+                                    <i class="bi bi-person-circle mx-3"></i>
+                                    <p>Account</p>
+                                </a> 
 
                                 <hr class="border-secondary">
                                 <div class="other-links">
@@ -94,7 +89,7 @@
                     <div class="col-2 d-none d-lg-block d-xl-none">
                         <div class="row">
                             <div class="side-bar col-12 text-light px-0">
-                                <a href="index.html"><img class="spotify-logo" src="../assets/spotify-logo.png" alt="sidebar-logo"></a>
+                                <a href="../index.html"><img class="spotify-logo" src="../assets/spotify-logo.png" alt="sidebar-logo"></a>
 
                                 <a href="../index.html" class="d-flex flex-column py-2 align-items-center justify-content-center">
                                     <i class="bi bi-house-door"></i>
@@ -111,20 +106,20 @@
                                     <p class="mx-0">Albums</p>
                                 </a>
 
-                                <a href="./artists.html" class="d-flex flex-column py-2 align-items-center justify-content-center">
+                                <a href="../artists/artists.html" class="d-flex flex-column py-2 align-items-center justify-content-center">
                                     <i class="bi bi-music-note-beamed"></i>
                                     <p class="mx-0">Artists</p>
-                                </a>
-
-                                <a href="#" class="d-flex flex-column py-2 align-items-center justify-content-center">
-                                    <i class="bi bi-plus-square-dotted"></i>
-                                    <p class="mx-0">Create Playlist</p>
                                 </a>
 
                                 <a href="../favourites/favourites.html" class="d-flex flex-column py-2 align-items-center justify-content-center">
                                     <i class="bi bi-heart-fill"></i>
                                     <p class="mx-0">Liked Songs</p>
                                 </a>
+
+                                <a href="../profile/profile.html" class="d-flex flex-column py-2 align-items-center justify-content-center">
+                                    <i class="bi bi-person-circle mx-3"></i>
+                                    <p>Account</p>
+                                </a> 
 
                             </div>
                         </div>
