Changed some styles

--- a/artists/artists.html
+++ b/artists/artists.html
@@ -161,7 +161,7 @@
                             <div class="album-info">
                                 <div class="row m-0 verified-artist-badge">
 
-                                    <img src="../assets/verified.jpg" width="50" height="50" alt="logo-verified"> <h6 class="d-inline-block">Verified Artist</h6>
+                                    <img src="../assets/verified.jpg" width="50" height="50" alt="logo-verified"> <h6 class="d-inline-block mb-0 ml-2">Verified Artist</h6>
                                 </div>
                                 <p class="artist-queen"><strong>Queen</strong></p>
                                 <p>37,120,733 monthly listeners</p>  
