--- a/genres/genres.html
+++ b/genres/genres.html
@@ -137,16 +137,16 @@
                                 <h3>Genres page</h3>
                             </div>
                             <div class="col-12 text-center showList bg-songLibrary">
-                                <button type="button" id="rock" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Rock</button>
-                                <button type="button" id="underground" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Underground</button>
-                                <button type="button" id="r&b" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">R&B</button>
-                                <button type="button" id="jazz" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Jazz</button>
-                                <button type="button" id="modern" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Modern Rock</button>
-                                <button type="button" id="classical" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Classical</button>
-                                <button type="button" id="fusion" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Fusion</button>
-                                <button type="button" id="rap" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Rap</button>
-                                <button type="button" id="pop" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Pop</button>
-                                <button type="button" id="country" class="btn btn-secondary btn-lg btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Country</button>
+                                <button type="button" id="rock" class="btn btn-secondary btn-sm btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Rock</button>
+                                <button type="button" id="underground" class="btn btn-secondary btn-sm btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Underground</button>
+                                <button type="button" id="r&b" class="btn btn-secondary btn-sm btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">R&B</button>
+                                <button type="button" id="jazz" class="btn btn-secondary btn-sm btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Jazz</button>
+                                <button type="button" id="modern" class="btn btn-secondary btn-sm btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Modern Rock</button>
+                                <button type="button" id="classical" class="btn btn-secondary btn-sm btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Classical</button>
+                                <button type="button" id="fusion" class="btn btn-secondary btn-sm btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Fusion</button>
+                                <button type="button" id="rap" class="btn btn-secondary btn-sm btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Rap</button>
+                                <button type="button" id="pop" class="btn btn-secondary btn-sm btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Pop</button>
+                                <button type="button" id="country" class="btn btn-secondary btn-sm btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Country</button>
                                 <div class="col-12 border-bottom border-secondary"></div>
                             </div>
 
