--- a/genres/genres.html
+++ b/genres/genres.html
@@ -137,16 +137,16 @@
                                 <h3>Genres page</h3>
                             </div>
                             <div class="col-12 text-center showList bg-songLibrary">
-                                <button type="button" id="rock" class="btn btn-secondary btn-sm btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Rock</button>
-                                <button type="button" id="underground" class="btn btn-secondary btn-sm btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Underground</button>
-                                <button type="button" id="r&b" class="btn btn-secondary btn-sm btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">R&B</button>
-                                <button type="button" id="jazz" class="btn btn-secondary btn-sm btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Jazz</button>
-                                <button type="button" id="modern" class="btn btn-secondary btn-sm btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Modern Rock</button>
-                                <button type="button" id="classical" class="btn btn-secondary btn-sm btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Classical</button>
-                                <button type="button" id="fusion" class="btn btn-secondary btn-sm btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Fusion</button>
-                                <button type="button" id="rap" class="btn btn-secondary btn-sm btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Rap</button>
-                                <button type="button" id="pop" class="btn btn-secondary btn-sm btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Pop</button>
-                                <button type="button" id="country" class="btn btn-secondary btn-sm btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-3 mx-2 mt-5">Country</button>
+                                <button type="button" id="rock" class="btn btn-secondary btn-sm btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-lg-2 mx-2 mt-5">Rock</button>
+                                <button type="button" id="underground" class="btn btn-secondary btn-sm btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-lg-2 mx-2 mt-5">Underground</button>
+                                <button type="button" id="r&b" class="btn btn-secondary btn-sm btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-lg-2 mx-2 mt-5">R&B</button>
+                                <button type="button" id="jazz" class="btn btn-secondary btn-sm btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-lg-2 mx-2 mt-5">Jazz</button>
+                                <button type="button" id="modern" class="btn btn-secondary btn-sm btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-lg-2 mx-2 mt-5">Modern Rock</button>
+                                <button type="button" id="classical" class="btn btn-secondary btn-sm btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-lg-2 mx-2 mt-5">Classical</button>
+                                <button type="button" id="fusion" class="btn btn-secondary btn-sm btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-lg-2 mx-2 mt-5">Fusion</button>
+                                <button type="button" id="rap" class="btn btn-secondary btn-sm btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-lg-2 mx-2 mt-5">Rap</button>
+                                <button type="button" id="pop" class="btn btn-secondary btn-sm btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-lg-2 mx-2 mt-5">Pop</button>
+                                <button type="button" id="country" class="btn btn-secondary btn-sm btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-lg-2 mx-2 mt-5">Country</button>
                                 <div class="col-12 border-bottom border-secondary"></div>
                             </div>
 
@@ -168,7 +168,7 @@
                                                 <div class="hp-card-img">
                                                     <img src="/assets/cards/10.jpg " width="70px" height="70px" alt="... ">
                                                 </div>
-                                                <div class="ml-3 mt-4">
+                                                <div class="ml-3 mt-1">
                                                     <h5 class="hp-card-title">Deep Purple</h5>
                                                     <p>Made in Japan</p>
                                                     <i class="bi bi-heart dpurpletHeart" id="firstHeart"></i>
@@ -180,7 +180,7 @@
                                                 <div class="hp-card-img">
                                                     <img src="/assets/cards/12.jpg " width="70px" height="70px" alt="... ">
                                                 </div>
-                                                <div class="ml-3 mt-4">
+                                                <div class="ml-3 mt-1">
                                                     <h5 class="hp-card-title doors">Doors</h5>
                                                     <p>The Doors</p>
                                                     <i class="bi bi-heart doorstHeart"></i>
@@ -192,7 +192,7 @@
                                                 <div class="hp-card-img">
                                                     <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
                                                 </div>
-                                                <div class="ml-3 mt-4">
+                                                <div class="ml-3 mt-1">
                                                     <h5 class="hp-card-title ">Led Zeppelin</h5>
                                                     <p>Led Zeppelin IV</p>
                                                     <i class="bi bi-heart ledZep"></i>
@@ -204,7 +204,7 @@
                                                 <div class="hp-card-img">
                                                     <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
                                                 </div>
-                                                <div class="ml-3 mt-4">
+                                                <div class="ml-3 mt-1">
                                                     <h5 class="hp-card-title ">The Who</h5>
                                                     <p>Who's Next</p>
                                                     <i class="bi bi-heart who"></i>
@@ -216,7 +216,7 @@
                                                 <div class="hp-card-img">
                                                     <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
                                                 </div>
-                                                <div class="ml-3 mt-4">
+                                                <div class="ml-3 mt-1">
                                                     <h5 class="hp-card-title ">Rolling Stones</h5>
                                                     <p>Flowers</p>
                                                     <i class="bi bi-heart roll"></i>
@@ -228,7 +228,7 @@
                                                 <div class="hp-card-img">
                                                     <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
                                                 </div>
-                                                <div class="ml-3 mt-4">
+                                                <div class="ml-3 mt-1">
                                                     <h5 class="hp-card-title ">Pink Floyd</h5>
                                                     <p>Atom Heart Mother</p>
                                                     <i class="bi bi-heart pfloyd"></i>
@@ -240,7 +240,7 @@
                                                 <div class="hp-card-img">
                                                     <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
                                                 </div>
-                                                <div class="ml-3 mt-4">
+                                                <div class="ml-3 mt-1">
                                                     <h5 class="hp-card-title ">The Clash</h5>
                                                     <p>The Clash</p>
                                                     <i class="bi bi-heart clash"></i>
@@ -252,7 +252,7 @@
                                                 <div class="hp-card-img">
                                                     <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
                                                 </div>
-                                                <div class="ml-3 mt-4">
+                                                <div class="ml-3 mt-1">
                                                     <h5 class="hp-card-title ">The Police</h5>
                                                     <p>Reggatta de Blanc</p>
                                                     <i class="bi bi-heart police"></i>
@@ -264,7 +264,7 @@
                                                 <div class="hp-card-img">
                                                     <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
                                                 </div>
-                                                <div class="ml-3 mt-4">
+                                                <div class="ml-3 mt-1">
                                                     <h5 class="hp-card-title">David Bowie</h5>
                                                     <p>Space Oddity</p>
                                                     <i class="bi bi-heart bowie"></i>
@@ -276,7 +276,7 @@
                                                 <div class="hp-card-img">
                                                     <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
                                                 </div>
-                                                <div class="ml-3 mt-4">
+                                                <div class="ml-3 mt-1">
                                                     <h5 class="hp-card-title">Janis Joplin</h5>
                                                     <p>Live in Honolulu</p>
                                                     <i class="bi bi-heart joplin"></i>
@@ -288,7 +288,7 @@
                                                 <div class="hp-card-img">
                                                     <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
                                                 </div>
-                                                <div class="ml-3 mt-4">
+                                                <div class="ml-3 mt-1">
                                                     <h5 class="hp-card-title">MFSB</h5>
                                                     <p>Love is the message</p>
                                                     <i class="bi bi-heart mfsb"></i>
@@ -300,7 +300,7 @@
                                                 <div class="hp-card-img">
                                                     <img src="/assets/cards/1.jpg " width="70px" height="70px" alt="... ">
                                                 </div>
-                                                <div class="ml-3 mt-4">
+                                                <div class="ml-3 mt-1">
                                                     <h5 class="hp-card-title">Jimi Hendrix</h5>
                                                     <p>Are you experienced</p>
                                                     <i class="bi bi-heart hendrix"></i>
