--- a/favourites/favourites.html
+++ b/favourites/favourites.html
@@ -239,6 +239,7 @@
     </script>
     <script src="../script.js"></script>
     <script src="favourites.js"></script>
+    <script src="../likedsongs.js"></script>
 </body>
 
 </html>
