--- a/genres/genres.html
+++ b/genres/genres.html
@@ -28,7 +28,7 @@
                         <div class="row">
                             <div class="side-bar col-12 px-0">
                                 <a href="../index.html"><img class="spotify-logo" src="../assets/spotify-logo.png" alt="sidebar-logo"></a>
-                                
+
                                 <a href="../index.html" class="d-flex py-2">
                                     <i class="bi bi-house-door mx-3"></i>
                                     <p>Home</p>
@@ -57,7 +57,7 @@
                                 <a href="../profile/profile.html" class="d-flex py-2">
                                     <i class="bi bi-person-circle mx-3"></i>
                                     <p>Account</p>
-                                </a> 
+                                </a>
 
                                 <hr class="border-secondary">
                                 <div class="other-links">
@@ -119,7 +119,7 @@
                                 <a href="../profile/profile.html" class="d-flex flex-column py-2 align-items-center justify-content-center">
                                     <i class="bi bi-person-circle mx-3"></i>
                                     <p>Account</p>
-                                </a> 
+                                </a>
 
                             </div>
                         </div>
@@ -847,7 +847,10 @@
         </div>
     </div>
 
+    <div class="container">
+        <div class="row" id="favouriteSong"></div>
 
+    </div>
 
 
 
