Added ability to show search results

--- a/search/search.html
+++ b/search/search.html
@@ -141,13 +141,20 @@
                                       <span class="input-group-text bg-dark" id="basic-addon1"><i class="bi bi-search text-white"></i></span>
                                     </div>
                                     <input type="text" name="q" class="form-control bg-dark text-white" placeholder="Search..." id="song-search">
+                                    <div class="input-group-append">
+                                        <button class="btn btn-success" id="search-btn">Search</button>
+                                      </div>
                                   </div>
                             </div>
 
                             <div class="col-12 text-center">
-                                <button class="btn btn-success" id="search-btn">Search</button>
+                                <h4 id="search-results"></h4>
                             </div>
 
+                        </div>
+
+                        <div class="row" id="show-results-container">
+                            
                         </div>
 
                     </div>
