create list favourite

--- a/genres/genres.html
+++ b/genres/genres.html
@@ -133,8 +133,9 @@
 
                         <div class="row ml-4 ">
                             <!-- FRANCESCO CODE GOES HERE -->
-                            <div class="col-12 mt-5 border-bottom border-secondary">
+                            <div class="d-flex justify-content-between col-12 my-md-3 my-lg-5 border-bottom border-secondary">
                                 <h3>Genres page</h3>
+                                <button id="showListBtn" class="btn-secondary btn-sm btn-dark btn-hover rounded-pill">Show List</button>
                             </div>
                             <div class="col-12 text-center showList bg-songLibrary">
                                 <button type="button" id="rock" class="btn btn-secondary btn-sm btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-1 my-sm-1 my-lg-2 mx-2 ">Rock</button>
@@ -158,7 +159,7 @@
 
 
                             <div class="styleSection displaynone" id="rockStyle">
-                                <h3 class="styleTitle">ROCK</h3>
+                                <h4 class="styleTitle">ROCK</h4>
 
 
                                 <div class="d-flex col-12 py-3 ">
@@ -314,7 +315,7 @@
                             </div>
                             <!-- END ROCK SECTION -->
                             <div class="styleSection displaynone" id="undergroundStyle">
-                                <h3 class="styleTitle">UNDERGROUND</h3>
+                                <h4 class="styleTitle">UNDERGROUND</h4>
                                 <div class="d-flex col-12 py-3 ">
 
                                     <div class="d-flex flex-wrap mt-5">
@@ -444,7 +445,7 @@
                             <!-- END UNDERGROUND SECTION -->
                             <div class="styleSection displaynone" id="rebStyle">
                                 <div class="d-flex col-12 py-3">
-                                    <h3 class="styleTitle">R&B</h3>
+                                    <h4 class="styleTitle">R&B</h4>
                                     <div class="d-flex flex-wrap mt-5">
                                         <div class="hp-card my-3 col-12 col-sm-6 col-md-4 col-lg-3">
                                             <div class="d-flex">
@@ -572,7 +573,7 @@
                             <!-- END R&B SECTION -->
                             <div class="styleSection displaynone" id="jazzStyle">
 
-                                <h3 class="styleTitle">JAZZ</h3>
+                                <h4 class="styleTitle">JAZZ</h4>
                                 <div class="d-flex col-12 py-3">
 
                                     <div class="d-flex flex-wrap mt-5 ">
@@ -707,7 +708,7 @@
                             </div>
                             <!-- END JAZZ SECTION -->
                             <div class="styleSection displaynone" id="modernStyle">
-                                <h3 class="styleTitle">MODERN ROCK</h3>
+                                <h4 class="styleTitle">MODERN ROCK</h4>
                                 <div class="d-flex col-12 py-3">
                                     <div class="d-flex flex-wrap mt-5 ">
                                         <div class="hp-card my-3 col-12 col-sm-6 col-md-4 col-lg-3">
@@ -848,7 +849,9 @@
     </div>
 
     <div class="container">
-        <div class="row" id="favouriteSong"></div>
+        <div id="favouriteSong" style="text-align: end;">
+
+        </div>
 
     </div>
 
