--- a/albums/albums.html
+++ b/albums/albums.html
@@ -334,10 +334,10 @@
         <div class="col-10 col-lg-4">
             
             <div class="song-info-footer d-flex justify-content-center justify-content-lg-start">
-                <img class="d-none d-xl-block" src="../assets/cards/9.jpg" alt="">
+                <img class="d-none d-xl-block" src="../assets/ckay.jfif" alt="">
                 <div class="d-flex flex-column">
-                    <p class="ml-3 mb-0 font-weight-bold">Another One Bites The Dust - Remastered 2011</p>
-                    <p class="ml-3 light-gray-text smaller-text mb-0">Queen</p>
+                    <p class="ml-3 mb-0 font-weight-bold">Love Nwantiti (ah ah ah)</p>
+                    <p class="ml-3 light-gray-text smaller-text mb-0">CKay</p>
                 </div>
                 <i class="bi bi-heart ml-2"></i>
             </div>
@@ -376,12 +376,15 @@
             </a>
         </div>
 
+        <audio class="audio-play" src="../CKay.mp3">
+        </audio>
 
         <div class="col-12 col-lg-4 d-none d-lg-flex flex-column align-items-center">
             <div class="music-controls-section d-flex align-items-center">
                 <i class="bi bi-shuffle mx-3 light-gray-text"></i>
                 <i class="bi bi-skip-backward-fill mx-3 light-gray-text"></i>
-                <i class="bi bi-play-circle-fill mx-3"></i>
+                <button type="button" class="music-play-btn btn btn-success"><i class="bi bi-play-circle-fill"></i></button>
+                <button type="button" class="music-pause-btn btn btn-success"><i class="bi bi-pause-circle"></i></button>
                 <i class="bi bi-skip-forward-fill mx-3 light-gray-text"></i>
                 <i class="bi bi-arrow-repeat mx-3 light-gray-text"></i>
             </div>  
