--- a/search/search.html
+++ b/search/search.html
@@ -210,10 +210,10 @@
                                     <i class="bi bi-skip-backward-fill mx-3 light-gray-text"></i>
                                     <i class="bi bi-play-circle-fill mx-3" id="playPauseBtn"></i>
                                     <i class="bi bi-skip-forward-fill mx-3 light-gray-text"></i>
-                                    <i class="bi bi-arrow-repeat mx-3 light-gray-text"></i>
+                                    <i class="bi bi-arrow-repeat mx-3 light-gray-text" id="refresh"></i>
                                 </div>  
                                 <div class="track-length d-flex align-items-center">
-                                    <p class="mb-0 mx-3">0:00</p>
+                                    <p class="mb-0 mx-3" id="visibleTime">0:00</p>
                                     <div class="track-bar"></div>
                                     <audio src="" autoplay id="musicPlay"></audio>
                                     <p class="mb-0 mx-3">0:30</p>
