try to create a modal

--- a/genres/genres.html
+++ b/genres/genres.html
@@ -135,7 +135,9 @@
                             <!-- FRANCESCO CODE GOES HERE -->
                             <div class="d-flex justify-content-between col-12 my-md-3 my-lg-5 border-bottom border-secondary">
                                 <h3>Genres page</h3>
-                                <button id="showListBtn" class="btn-secondary btn-sm btn-dark btn-hover rounded-pill">Show List</button>
+                                <button type="button" id="showListBtn" class="btn-secondary btn-sm btn-dark btn-hover rounded-pill" data-toggle="modal" data-target="#showListBtn">
+  Show List
+</button>
                             </div>
                             <div class="col-12 text-center showList bg-songLibrary">
                                 <button type="button" id="rock" class="btn btn-secondary btn-sm btn-dark btn-hover col-12 col-sm-6 col-md-4 col-lg-2 my-1 my-sm-1 my-lg-2 mx-2 ">Rock</button>
