--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@
                                 <i class="bi bi-house-door"></i>
                                 <p class="mx-0">Home</p>
                             </a> 
+                            <a href="../search/search.html" class="d-flex flex-column  py-2 align-items-center justify-content-center">
+                                <i class="bi bi-search"></i>
+                                <p class="mx-0">Searchfwefewf</p>
+                            </a>
                             
                             <a href="../genres/genres.html" class="d-flex flex-column py-2 align-items-center justify-content-center">
                                 <i class="bi bi-collection-play"></i>
