--- a/search/search.html
+++ b/search/search.html
@@ -153,7 +153,7 @@
 
                         </div>
 
-                        <div class="row" id="show-results-container">
+                        <div class="row d-flex justify-content-center main-page-content" id="show-results-container">
                             
                         </div>
 
