search bar link added each page

--- a/genres/genres.html
+++ b/genres/genres.html
@@ -34,6 +34,11 @@
                                     <p>Home</p>
                                 </a>
 
+                                <a href="../search/search.html" class="d-flex  py-2">
+                                    <i class="mx-3 bi bi-search"></i>
+                                    <p>Search</p>
+                                </a> 
+                                
                                 <a href="./genres.html" class="d-flex py-2 selected">
                                     <i class="bi bi-collection-play mx-3"></i>
                                     <p>Your Library</p>
