Updaed profile cards colors

--- a/profile/profile.html
+++ b/profile/profile.html
@@ -216,14 +216,14 @@
                                 <h2 class="card-header m-0 py-2">Free</h2>
                                 <div class="card-body d-flex flex-column">
                                     <p class="mb-2">Annual Plan</p>
-                                    <h2 class="card-title mt-0 pt-0">£0</h2>
+                                    <h2 class="card-title mt-0 pt-0 text-success">£0</h2>
                                     <div class="card-text">
                                         <p>Per Month</p>
                                         <p class="my-1">Listen To Spotify</p>
                                         <p class="my-1">6x Skips Per Hour</p>
                                         <p class="my-1 mb-3">Solo Use</p>
                                     </div>
-                                    <a href="#" class="btn btn-primary">Current</a>
+                                    <a href="#" class="btn btn-success">Current Plan</a>
                                 </div>
                             </div>
                         </div>
@@ -232,14 +232,14 @@
                                 <h2 class="card-header m-0 py-2">Standard</h2>
                                 <div class="card-body d-flex flex-column">
                                     <p class="mb-2">Annual Plan</p>
-                                    <h2 class="card-title mt-0 pt-0">£9.99</h2>
+                                    <h2 class="card-title mt-0 pt-0 text-sucess">£9.99</h2>
                                     <div class="card-text">
                                         <p>Per Month</p>
                                         <p class="my-1">Listen To Spotify</p>
                                         <p class="my-1">Unlimited Songs</p>
                                         <p class="my-1 mb-3">Solo Use</p>
                                     </div>
-                                    <button href="#" class="btn btn-outline-primary" data-toggle="modal" data-target="#standard-payment">Purchase</button>
+                                    <button href="#" class="btn btn-outline-success" data-toggle="modal" data-target="#standard-payment">Purchase</button>
                                 </div>
                             </div>
                         </div>
@@ -248,14 +248,14 @@
                                 <h2 class="card-header m-0 py-2">Family</h2>
                                 <div class="card-body d-flex flex-column">
                                     <p class="mb-2">Annual Plan</p>
-                                    <h2 class="card-title mt-0 pt-0">£29.99</h2>
+                                    <h2 class="card-title mt-0 pt-0 text-success">£29.99</h2>
                                     <div class="card-text">
                                         <p>Per Month</p>
                                         <p class="my-1">Listen To Spotify</p>
                                         <p class="my-1">Unlimited Songs</p>
                                         <p class="my-1 mb-3">6x Family Members</p>
                                     </div>
-                                    <button href="#" class="btn btn-outline-primary" data-toggle="modal" data-target="#family-payment">Purchase</button>
+                                    <button href="#" class="btn btn-outline-success" data-toggle="modal" data-target="#family-payment">Purchase</button>
                                 </div>
                             </div>
                         </div>
