--- a/genres/genres.html
+++ b/genres/genres.html
@@ -135,7 +135,7 @@
                             <!-- FRANCESCO CODE GOES HERE -->
                             <div class="d-flex justify-content-between col-12 my-md-3 my-lg-5 border-bottom border-secondary">
                                 <h3>Genres page</h3>
-                                <button type="button" id="showListBtn" class="btn-secondary btn-sm btn-dark btn-hover rounded-pill" data-toggle="modal" data-target="#showListBtn">
+                                <button type="button" id="showListBtn" class="btn-secondary btn-sm btn-dark btn-hover rounded-pill" data-target="#showListBtn">
   Show List
 </button>
                             </div>
