Fixed Album Page

--- a/albums/albums.html
+++ b/albums/albums.html
@@ -388,8 +388,7 @@
             <div class="music-controls-section d-flex align-items-center">
                 <i class="bi bi-shuffle mx-3 light-gray-text"></i>
                 <i class="bi bi-skip-backward-fill mx-3 light-gray-text"></i>
-                <button type="button" class="music-play-btn btn btn-success"><i class="bi bi-play-circle-fill"></i></button>
-                <button type="button" class="music-pause-btn btn btn-success"><i class="bi bi-pause-circle"></i></button>
+                <i class="bi bi-play-circle-fill"></i>
                 <i class="bi bi-skip-forward-fill mx-3 light-gray-text"></i>
                 <i class="bi bi-arrow-repeat mx-3 light-gray-text"></i>
             </div>  
