--- a/albums/albums.html
+++ b/albums/albums.html
@@ -137,7 +137,7 @@
                 <div class="col-12 col-lg-10 main-page-content px-0">
 
                      <!-- Album header -->
-                     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="0">
                         <div class="carousel-inner">
                           <div class="carousel-item active">
 
